# tensorprox

./: .env.miner  .env.validator  .gitignore  =2.0  README.md  get_ip.py  gramine_integration.md  mining_glory.md  nohup.out  pp.py  priv_key  py.py  pyproject.toml  redis_connect.py  requirements.txt  run.sh  setup.sh  task_gramine.md  weights.csv
.github/workflows/: python-package.yml
assets/: miner.md  validator.md
model/: decision_tree.ipynb  decision_tree.pkl  scaler.pkl
neurons/: client_server.py  miner.py  validator.py
neurons/Validator/: scoring.py  traffic_data.py
orchestrator/: orchestrator.py  orchestrator_setup.sh  websocket_client.py
storage/: state.npz
tensorprox/: __init__.py  global_vars.py  mutable_globals.py  settings.py
tensorprox/base/: dendrite.py  forward.py  loop_runner.py  miner.py  neuron.py  protocol.py  validator.py
tensorprox/bash/: challenge.sh  challenge.sh.sig  gre_setup.py.sig  initial_setup.sh  initial_setup.sh.sig  lockdown.sh  pwdless_sudo.sh  revert.sh.sig
tensorprox/core/: ddos_manager.py  fetch_nonce_key.py  gre_setup.py  gre_setup.py.sig  gre_setup_moat.py  miner_management.py  restrict.sh  round_manager.py  session_commands.py  sync_active_validators.py  traffic_generator.py  whitelist.sh
tensorprox/core/ddos/: __init__.py
tensorprox/core/ddos/config/: __init__.py  config_manager.py
tensorprox/core/ddos/detector/: __init__.py  detector.py  feature_extractor.py
tensorprox/core/ddos/metrics/: __init__.py  metrics_collector.py
tensorprox/core/ddos/mitigation/: __init__.py  mitigator.py
tensorprox/core/ddos/mitigation/strategies/: __init__.py  base.py  block.py  rate_limit.py
tensorprox/core/immutable/: bpf_loader.py  challenge.sh  gre_setup.py  initial_setup.sh  lockdown.sh  moat_xdp_core.c
tensorprox/core/immutable/challenge_gramine/: .gitignore  challenge.manifest.template  challenge.sh  setup_gramine_challenge.sh  setup_gramine_challenge_fixed.sh
tensorprox/miner_availability/: miner_availability.py  session_commands.py
tensorprox/rewards/: Attacker_capture.pcap  Benign_capture.pcap  King_capture.pcap  pcap.py  reward.py  scoring.py  weight_setter.py
tensorprox/rewards/pcap_files/14/: Attacker_capture.pcap  King_capture.pcap
tensorprox/rewards/pcap_files/7/: Attacker_capture.pcap  King_capture.pcap
tensorprox/tasks/: base_task.py  task_creation.py  traffic_data.py
tensorprox/utils/: config.py  logging.py  uids.py  utils.py
tensorprox/weight_setting/: weight_setter.py
utils/: settings.py  uids.py
